--- a/Loja-WEB/web/v2/listaProduto.xhtml
+++ b/Loja-WEB/web/v2/listaProduto.xhtml
@@ -8,7 +8,8 @@
                 xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <ui:define name="content">
-        <h:form>
+        <ui:include src="permissao.xhtml" />
+        <h:form rendered="#{managedLogin.admin}">
             <p:growl />
             <h:panelGroup style="width: 100%">
                 <h:panelGrid columns="4" style="">
