tentando arrumar problemas com forms (sempre); abusando o safado do CDI do JSF e removendo TUDO da sessão quando faz logout :)

--- a/Loja-WEB/web/v2/cadastro.xhtml
+++ b/Loja-WEB/web/v2/cadastro.xhtml
@@ -9,7 +9,7 @@
         <h:form style="margin-left: 20px; margin-top: 20px">
             <p:growl />
             <h1>
-                <h:outputText value="Cadastra-se" rendered="#{empty managedLogin.logado}" />
+                <h:outputText value="Cadastre-se" rendered="#{empty managedLogin.logado}" />
                 <h:outputText value="Alterar seus dados" rendered="#{not empty managedLogin.logado and !managedLogin.admin}" />
             </h1>
             <h:panelGrid columns="2">
