--- a/Loja-WEB/web/v2/comprar.xhtml
+++ b/Loja-WEB/web/v2/comprar.xhtml
@@ -9,7 +9,7 @@
 
     <ui:define name="content">
         <h:form>
-
+            <p:growl life="10000" />
             <p:wizard widgetVar="wizardComprar"
                       nextLabel="Próximo" backLabel="Anterior"
                       effect="fade" showNavBar="true"
