--- a/Loja-WEB/web/v2/comum.xhtml
+++ b/Loja-WEB/web/v2/comum.xhtml
@@ -65,6 +65,7 @@
                             <li><h:outputLink value="cadastroCategoria.xhtml">Cadastrar Categorias</h:outputLink></li>
                             <li><h:outputLink value="listaCategoria.xhtml">Listar Categorias</h:outputLink></li>
                             <li><h:outputLink value="cadastro.xhtml">Cadastrar Usuarios</h:outputLink></li>
+                            <li><h:outputLink value="listaUsuarios.xhtml">Listar Usuarios</h:outputLink></li>
                         </ul>
                     </h:panelGroup>
 
