--- a/Loja-WEB/web/v2/login.xhtml
+++ b/Loja-WEB/web/v2/login.xhtml
@@ -7,6 +7,7 @@
         <link href="./../resources/css/css3buttons.css" rel="stylesheet" type="text/css" />
         <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css" />
         <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css' />
+        <title>Login - SR-Malhas</title>
     </h:head>
 
     <h:body>
